servers/s1/iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Sep 22 18:18:16 2026
*mangle
:PREROUTING ACCEPT [59865971:47590296684]
:INPUT ACCEPT [32723540:26519027889]
:FORWARD ACCEPT [27130261:21069399904]
:OUTPUT ACCEPT [32370167:26348771992]
:POSTROUTING ACCEPT [59500428:47418171896]
-A OUTPUT -p udp -m owner --uid-owner 999 -m udp --dport 53 -j RETURN
-A OUTPUT -p tcp -m owner --uid-owner 999 -m tcp --dport 53 -j RETURN
-A OUTPUT -p tcp -m owner --uid-owner 999 -m tcp --dport 443 -j MARK --set-xmark 0x64/0xffffffff
COMMIT
# Completed on Tue Sep 22 18:18:16 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Sep 22 18:18:16 2026
*filter
:INPUT ACCEPT [19415737:20673251320]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [32370167:26348771992]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:VPN_LAN - [0:0]
-A INPUT -s 10.8.0.0/24 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 10.9.0.0/24 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10443 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 443,8443,9443 -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -d 192.168.0.0/24 -i tun1 -j VPN_LAN
-A FORWARD -i tun0 -o tun1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun1 -o tun0 -j ACCEPT
-A FORWARD -o tun1 -j ACCEPT
-A FORWARD -i tun1 -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A VPN_LAN -s 10.9.0.5/32 -d 192.168.0.0/24 -j ACCEPT
-A VPN_LAN -s 10.9.0.10/32 -d 192.168.0.0/24 -j ACCEPT
-A VPN_LAN -s 10.9.0.11/32 -d 192.168.0.0/24 -j ACCEPT
-A VPN_LAN -j DROP
COMMIT
# Completed on Tue Sep 22 18:18:16 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Sep 22 18:18:16 2026
*nat
:PREROUTING ACCEPT [521223:66764998]
:INPUT ACCEPT [266426:21737063]
:OUTPUT ACCEPT [8890:547424]
:POSTROUTING ACCEPT [1039:76348]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.9.0.0/24 -o tun0 -j MASQUERADE
-A POSTROUTING -o tun0 -m owner --uid-owner 999 -j MASQUERADE
COMMIT
# Completed on Tue Sep 22 18:18:16 2026
